# GLBP

./: .gitignore  CMakeLists.txt
cmake/: FindJSON.cmake  FindSDL2.cmake
depend/: CMakeLists.txt
examples/: CMakeLists.txt
examples/triangle/: CMakeLists.txt
examples/triangle/src/: Main.cpp
include/: Log.hpp  Material.hpp  Program.hpp  Texture.hpp  Util.hpp  glTF2.hpp
include/depend/: Base64.hpp  JSON.hpp  Math.hpp  OpenGL.hpp
include/glad/: glad.h
src/: Program.cpp  Texture.cpp  glTF2.cpp  glad.c
